--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -20,6 +20,12 @@ jobs:
         
       - name: Test npm
         run: npm test
+
+      - name: Start npm
+        run: npm start
+
+      - name: Wait for server
+        run: npx wait-on http://localhost:3000
         
       - name: Curl test
         run: curl http://localhost:3000
