--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -21,8 +21,11 @@ jobs:
       - name: Test npm
         run: npm test
 
-      - name: Wait for server
-        run: npx wait-on http://localhost:3000
+      - name: Start npm
+        run: npm start &
+
+      - name: slepp
+        run: sleep 5
         
       - name: Curl test
         run: curl http://localhost:3000
